# MathLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Matrix.h
src/: Matrix.cpp
test/: test_matrix.cpp
